--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./destyle.min.css" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./css/destyle.min.css" />
+    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <header>
       <div class="header-logo">
-        <a href="#"><img src="./image/logo.png" alt="" /> </a>
+        <a href="./index.html"><img src="./image/logo.png" alt="" /> </a>
       </div>
 
       <div id="hamburger">
@@ -24,16 +25,16 @@
 
       <nav class="header-nav header-nav-sm">
         <ul class="header-ul">
-          <li><a class="header-a" href="#">ホーム</a></li>
-          <li><a class="header-a" href="#">書士・提携先一覧</a></li>
-          <li><a class="header-a" href="#">お問い合わせ</a></li>
+          <li class="header-sp-li"><a class="header-sp-a" href="./index.html">ホーム</a></li>
+          <li class="header-sp-li"><a class="header-sp-a" href="./team.html">書士・提携先一覧</a></li>
+          <li class="header-sp-li-purple-button"><a class="header-sp-a-purple-button" href="./contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
       <nav class="header-nav pc_display">
         <ul class="header-ul">
-          <li><a class="header-a" href="#">ホーム</a></li>
-          <li><a class="header-a" href="#">書士・提携先一覧</a></li>
-          <li><a class="header-a purple-button" href="#">お問い合わせ</a></li>
+          <li><a class="header-a" href="./index.html">ホーム</a></li>
+          <li><a class="header-a" href="./team.html">書士・提携先一覧</a></li>
+          <li><a class="header-a purple-button" href="./contact.html">お問い合わせ</a></li>
         </ul>
       </nav>
     </header>
@@ -167,7 +168,7 @@
             </div>
           </div>
           <div class="team-link-button">
-            <a href="">その他の行政書士・提携企業を見る</a
+            <a href="./team.html">その他の行政書士・提携企業を見る</a
             ><img
               src="./image/vector.png"
               alt=""
