--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./css/destyle.min.css" />
-    <link rel="stylesheet" href="./css/common.css">
+    <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -25,16 +25,28 @@
 
       <nav class="header-nav header-nav-sm">
         <ul class="header-ul">
-          <li class="header-sp-li"><a class="header-sp-a" href="./index.html">ホーム</a></li>
-          <li class="header-sp-li"><a class="header-sp-a" href="./team.html">書士・提携先一覧</a></li>
-          <li class="header-sp-li-purple-button"><a class="header-sp-a-purple-button" href="./contact.html">お問い合わせ</a></li>
+          <li class="header-sp-li">
+            <a class="header-sp-a" href="./index.html">ホーム</a>
+          </li>
+          <li class="header-sp-li">
+            <a class="header-sp-a" href="./team.html">書士・提携先一覧</a>
+          </li>
+          <li class="header-sp-li-purple-button">
+            <a class="header-sp-a-purple-button" href="./contact.html"
+              >お問い合わせ</a
+            >
+          </li>
         </ul>
       </nav>
       <nav class="header-nav pc_display">
         <ul class="header-ul">
           <li><a class="header-a" href="./index.html">ホーム</a></li>
           <li><a class="header-a" href="./team.html">書士・提携先一覧</a></li>
-          <li><a class="header-a purple-button" href="./contact.html">お問い合わせ</a></li>
+          <li>
+            <a class="header-a purple-button" href="./contact.html"
+              >お問い合わせ</a
+            >
+          </li>
         </ul>
       </nav>
     </header>
@@ -216,10 +228,10 @@
     </main>
 
     <footer>
-        <div class="footer-inner">
+      <div class="footer-inner">
         <div class="footer-copyright">© 2022 行政書士法人LILA</div>
-        <img  class="footer-facebook-logo" src="./image/facebook.png" alt="">
-    </div>
+        <img class="footer-facebook-logo" src="./image/facebook.png" alt="" />
+      </div>
     </footer>
 
     <script src="jquery-3.6.0.min.js"></script>
