--- a/team.html
+++ b/team.html
@@ -10,34 +10,34 @@
     <link rel="stylesheet" href="./css/team.css" />
   </head>
   <body>
-    <header>
-      <div class="header-logo">
-        <a href="./index.html"><img src="./image/logo.png" alt="" /> </a>
-      </div>
+      <header>
+    <div class="header-logo">
+      <a href="./index.html"><img src="./image/logo.png" alt="" /> </a>
+    </div>
 
-      <div id="hamburger">
-        <div class="icon">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
+    <div id="hamburger">
+      <div class="icon">
+        <span></span>
+        <span></span>
+        <span></span>
       </div>
+    </div>
 
-      <nav class="header-nav header-nav-sm">
-        <ul class="header-ul">
-          <li><a class="header-a" href="./index.html">ホーム</a></li>
-          <li><a class="header-a" href="./team.html">書士・提携先一覧</a></li>
-          <li><a class="header-a" href="./contact.html">お問い合わせ</a></li>
-        </ul>
-      </nav>
-      <nav class="header-nav pc_display">
-        <ul class="header-ul">
-          <li><a class="header-a" href="./index.html">ホーム</a></li>
-          <li><a class="header-a" href="./team.html">書士・提携先一覧</a></li>
-          <li><a class="header-a purple-button" href="./contact.html">お問い合わせ</a></li>
-        </ul>
-      </nav>
-    </header>
+    <nav class="header-nav header-nav-sm">
+      <ul class="header-ul">
+        <li class="header-sp-li"><a class="header-sp-a" href="./index.html">ホーム</a></li>
+        <li class="header-sp-li"><a class="header-sp-a" href="./team.html">書士・提携先一覧</a></li>
+        <li class="header-sp-li-purple-button"><a class="header-sp-a-purple-button" href="./contact.html">お問い合わせ</a></li>
+      </ul>
+    </nav>
+    <nav class="header-nav pc_display">
+      <ul class="header-ul">
+        <li><a class="header-a" href="./index.html">ホーム</a></li>
+        <li><a class="header-a" href="./team.html">書士・提携先一覧</a></li>
+        <li><a class="header-a purple-button" href="./contact.html">お問い合わせ</a></li>
+      </ul>
+    </nav>
+  </header>
 
     <main>
       <div class="main-inner">
