--- a/contact.html
+++ b/contact.html
@@ -116,7 +116,7 @@
 
     <footer>
       <div class="footer-inner">
-        <div class="footer-copyright">© 2022 行政書士法人LILA</div>
+        <div class="footer-copyright">© 2022 行政書士法人LILAC</div>
         <img class="footer-facebook-logo" src="./image/facebook.png" alt="" />
       </div>
     </footer>
