--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <dl class="access-dl">
               <div class="access-dl-contents-wrapper">
                 <dt class="access-dt">会社名</dt>
-                <dd class="access-dd">行政書士法人LILA</dd>
+                <dd class="access-dd">行政書士法人LILAC</dd>
               </div>
               <div class="access-dl-contents-wrapper">
                 <dt class="access-dt">所在地</dt>
@@ -229,7 +229,7 @@
 
     <footer>
       <div class="footer-inner">
-        <div class="footer-copyright">© 2022 行政書士法人LILA</div>
+        <div class="footer-copyright">© 2022 行政書士法人LILAC</div>
         <img class="footer-facebook-logo" src="./image/facebook.png" alt="" />
       </div>
     </footer>
