--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="想いを価値に。可能性を実現に。行政書士法人LILACの公式HPです。">
+    <title>LILAC</title>
     <link rel="shortcut icon" href="./image/favicon.jpg">
     <link rel="stylesheet" href="./css/destyle.min.css" />
     <link rel="stylesheet" href="./css/common.css" />
@@ -206,7 +207,7 @@
               </div>
               <div class="access-dl-contents-wrapper">
                 <dt class="access-dt">電話番号</dt>
-                <dd class="access-dd">00-0000-0000</dd>
+                <dd class="access-dd">080-4099-6001</dd>
               </div>
               <div class="access-dl-contents-wrapper">
                 <dt class="access-dt">営業時間</dt>
