--- a/team.html
+++ b/team.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta name="description" content="想いを価値に。可能性を実現に。行政書士法人LILACの公式HPの書士・提携先一覧ページです。">
+    <title>LILAC | 書士・提携先一覧</title>
     <link rel="shortcut icon" href="./image/favicon.jpg">
     <link rel="stylesheet" href="./css/destyle.min.css" />
     <link rel="stylesheet" href="./css/common.css" />
