--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="想いを価値に。可能性を実現に。行政書士法人LILACの公式HPです。">
+    <meta
+      name="description"
+      content="想いを価値に。可能性を実現に。行政書士法人LILACの公式HPです。"
+    />
     <title>LILAC</title>
-    <link rel="shortcut icon" href="./image/favicon.jpg">
+    <link rel="shortcut icon" href="./image/favicon.jpg" />
     <link rel="stylesheet" href="./css/destyle.min.css" />
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/fade.css" />
   </head>
   <body>
     <header>
@@ -55,17 +59,23 @@
 
     <main>
       <div class="top-attract">
-        <p class="top-attract-text">想いを価値に。<br />可能性を実現に。</p>
+        <p class="top-attract-text fadeInContents">
+          想いを価値に。<br />可能性を実現に。
+        </p>
       </div>
       <div class="main-inner">
         <div class="greeting">
-          <h2 class="greeting-h2">Greeting</h2>
+          <h2 class="greeting-h2 fadeInContents animation-order-01">
+            Greeting
+          </h2>
           <div class="greeting-contents-wrapper">
             <div class="greeting-text">
-              <p class="greeting-text-title">
+              <p class="greeting-text-title fadeInContents animation-order-02">
                 想いを価値に。<br class="sm" />可能性を実現に。
               </p>
-              <p class="greeting-text-content">
+              <p
+                class="greeting-text-content fadeInContents animation-order-03"
+              >
                 この度は、当事務所webサイトに訪問いただき誠にありがとうございます。<br />
                 当事務所は2019年開業、2020年補助金申請100件突破、2021年法人化しており、補助金の第一人者として、事業再構築補助金をはじめ様々な補助金申請業務に携わってまいりました。企業売買でも精通しているため、M&A・事業継承の分野でもお役に立てる場面があるかと思います。是非一度ご相談ください。
                 <br />
@@ -81,13 +91,21 @@
         </div>
 
         <div class="works">
-          <h2 class="works-h2">Works</h2>
+          <h2 class="works-h2">
+            <span class="slide-in upAnime">
+              <span class="slide-in_inner upAnimeInner">Works</span>
+            </span>
+          </h2>
           <div class="works-contents-wrapper">
             <div class="works-contents">
               <div class="works-contents-text-contents">
                 <h3 class="works-contents-text-title">
-                  <span class="works-contents-text-title-number">01</span
-                  >補助金申請
+                  <span class="slide-in upAnime">
+                    <span class="slide-in_inner upAnimeInner">
+                      <span class="works-contents-text-title-number">01</span
+                      >補助金申請
+                    </span>
+                  </span>
                 </h3>
                 <p class="works-contents-text-content">
                   当事務所では、現在「小規模事業者持続化補助金」「ものづくり補助金」「IT導入補助金」「事業再構築補助金」の申請代行を行っております。必要な書類の選定や事業計画書の作成をお手伝いさせていただくため、再提出や不備が起こることがありません。<br />補助金の採択率も80％以上を誇っておりますので、是非一度ご相談ください。
@@ -98,8 +116,12 @@
             <div class="works-contents works-flex-reverse">
               <div class="works-contents-text-contents">
                 <h3 class="works-contents-text-title">
-                  <span class="works-contents-text-title-number">02</span
-                  >許認可申請
+                  <span class="slide-in upAnime">
+                    <span class="slide-in_inner upAnimeInner">
+                      <span class="works-contents-text-title-number">02</span
+                      >許認可申請
+                    </span>
+                  </span>
                 </h3>
                 <p class="works-contents-text-content">
                   許認可申請書の種類は非常に多く、建設業許可をはじめとして、許認可の種類は1万を超えます。
@@ -112,8 +134,12 @@
             <div class="works-contents">
               <div class="works-contents-text-contents">
                 <h3 class="works-contents-text-title">
-                  <span class="works-contents-text-title-number">03</span
-                  >VISA申請
+                  <span class="slide-in upAnime">
+                    <span class="slide-in_inner upAnimeInner">
+                      <span class="works-contents-text-title-number">03</span
+                      >VISA申請
+                    </span>
+                  </span>
                 </h3>
                 <p class="works-contents-text-content">
                   ビザ申請と一口に言ってもその外国人によって依頼内容は様々です。留学ビザ、特定技能ビザ、就労ビザ等種類は様々で、外国人の現在の状況に応じて認定申請・変更申請・更新申請を行います。ビザ申請は外国人にとって非常に重要であり、今後の生活や人生にも大きな影響を与えます。行政書士法人LILACでは入管のホームページでは載っていない情報もあるため、ビザにお困りな方は是非一度ご相談ください。
@@ -124,8 +150,12 @@
             <div class="works-contents works-flex-reverse">
               <div class="works-contents-text-contents">
                 <h3 class="works-contents-text-title">
-                  <span class="works-contents-text-title-number">04</span>M&A
-                  事業承継
+                  <span class="slide-in upAnime">
+                    <span class="slide-in_inner upAnimeInner">
+                      <span class="works-contents-text-title-number">04</span
+                      >M&A 事業承継
+                    </span>
+                  </span>
                 </h3>
                 <p class="works-contents-text-content">
                   行政書士法人LILACでは中小企業M&A・事業承継を行っております。M&A・事業承継では税務問題等も発生いたしますが、税理士をはじめとした外部の専門家と提携しておりますので、M&Aにかかるすべての業務を行うことが可能です。是非一度ご相談ください。
@@ -137,9 +167,13 @@
         </div>
 
         <div class="team">
-          <h2 class="team-h2">Team</h2>
+          <h2 class="team-h2">
+            <span class="slide-in upAnime">
+              <span class="slide-in_inner upAnimeInner">Team</span>
+            </span>
+          </h2>
           <div class="team-contents-wrapper">
-            <div class="team-contents">
+            <div class="team-contents fadeUpContents animation-order-01">
               <div class="team-contents-img">
                 <img src="./image/sasaki.png" alt="" />
               </div>
@@ -154,7 +188,7 @@
                 </p>
               </div>
             </div>
-            <div class="team-contents">
+            <div class="team-contents fadeUpContents animation-order-02">
               <div class="team-contents-img">
                 <img src="./image/iwakawa.png" alt="" />
               </div>
@@ -167,7 +201,7 @@
                 </p>
               </div>
             </div>
-            <div class="team-contents">
+            <div class="team-contents fadeUpContents animation-order-03">
               <div class="team-contents-img">
                 <img src="./image/ohira.png" alt="" />
               </div>
@@ -192,7 +226,11 @@
         </div>
 
         <div class="access">
-          <h2 class="access-h2">Access</h2>
+          <h2 class="access-h2">
+            <span class="slide-in upAnime">
+              <span class="slide-in_inner upAnimeInner">Access</span></span
+            >
+          </h2>
           <div class="access-contents-wrapper">
             <dl class="access-dl">
               <div class="access-dl-contents-wrapper">
@@ -237,11 +275,7 @@
     </footer>
 
     <script src="jquery-3.6.0.min.js"></script>
-    <script>
-      $("#hamburger").on("click", function () {
-        $(".icon").toggleClass("close");
-        $(".header-nav-sm").slideToggle();
-      });
-    </script>
+    <script src="./script/hamburger.js"></script>
+    <script src="./script/fade.js"></script>
   </body>
 </html>
