--- a/contact.html
+++ b/contact.html
@@ -53,13 +53,13 @@
         <p class="contact-title">
           内容を確認後、営業日3日以内にご返信いたします。
         </p>
-        <form action="" method="get" class="contact-form">
+        <form id="form" class="contact-form" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdOycpYzbe0XD33Us_R4nKBXCSf9NJpi3f8NS1Krh35ynS7XA/formResponse">
           <div class="contact-form-contents-box">
             <label class="contact-form-label" for="company">会社名 </label>
             <input
               class="contact-form-input"
               type="text"
-              name="company"
+              name="entry.318017902"
               id="company"
               required
             />
@@ -69,7 +69,7 @@
             <input
               class="contact-form-input"
               type="text"
-              name="name"
+              name="entry.473225601"
               id="name"
               required
             />
@@ -81,7 +81,7 @@
             <input
               class="contact-form-input"
               type="email"
-              name="email"
+              name="entry.1400480862"
               id="email"
               required
             />
@@ -91,7 +91,7 @@
             <input
               class="contact-form-input"
               type="tel"
-              name="phone"
+              name="entry.1300426511"
               id="phone"
               required
             />
@@ -100,19 +100,17 @@
             <label class="contact-form-label" for="msg">お問合せ内容 </label>
             <textarea
               class="contact-form-textarea"
-              name="msg"
+              name="entry.2090198470"
               id="msg"
               required
             ></textarea>
           </div>
           <div class="contact-form-contents-box contact-form-submit-box">
-            <input
-              class="contact-form-submit-button"
-              type="submit"
-              value="送信する"
-            />
+            <input class="contact-form-submit-button submit-btn" type="submit" value="送信する">
           </div>
         </form>
+        <p class="end-message">お問い合わせありがとうございました</p>
+        <p class="false-message">送信失敗です</p>
       </div>
     </main>
 
@@ -123,12 +121,8 @@
       </div>
     </footer>
 
-    <script src="jquery-3.6.0.min.js"></script>
-    <script>
-      $("#hamburger").on("click", function () {
-        $(".icon").toggleClass("close");
-        $(".header-nav-sm").slideToggle();
-      });
-    </script>
+    <script src="./script/jquery-3.6.0.min.js"></script>
+    <script src="./script/hamburger.js"></script>
+    <script src="./script/contact.js"></script>
   </body>
 </html>
