--- a/team.html
+++ b/team.html
@@ -301,7 +301,7 @@
       </div>
     </footer>
 
-    <script src="jquery-3.6.0.min.js"></script>
+    <script src="./script/jquery-3.6.0.min.js"></script>
     <script src="./script/hamburger.js"></script>
     <script src="./script/fade.js"></script>
   </body>
