--- a/team.html
+++ b/team.html
@@ -175,9 +175,11 @@
                 </p>
               </div>
             </div>
-                        <!-- -------------------------------------------------
+             <!-- -------------------------------------------------
+              -------------------------------------------------
             2022/12/23日追加分
            石下 貴大さん
+           -------------------------------------------------
             ------------------------------------------------- -->
             <div class="external-advisor-contents fadeUpContents animation-order-05">
               <div class="external-advisor-contents-img">
@@ -186,7 +188,7 @@
               <div class="external-advisor-contents-text-contents">
                 <p class="external-advisor-contents-text-name">石下 貴大</p>
                 <p class="external-advisor-contents-text-sub-name">
-                 IWASITA TAKAO
+                 IWASITA TAKAHIRO
                 </p>
                 <p class="external-advisor-contents-text-position">
                   行政書士<br>
@@ -213,7 +215,7 @@
               <div class="external-advisor-contents-text-contents">
                 <p class="external-advisor-contents-text-name">塩津 大輔</p>
                 <p class="external-advisor-contents-text-sub-name">
-                 SIOZU DAISUKE
+                 SIOTSU DAISUKE
                 </p>
                 <p class="external-advisor-contents-text-position">
                   行政書士<br>
@@ -229,34 +231,7 @@
                 </p>
               </div>
             </div>
-                      <!-- -------------------------------------------------
-            2022/12/23日追加分
-           橋場 和弥さん
-            ------------------------------------------------- -->
-            <div class="external-advisor-contents fadeUpContents animation-order-06">
-              <div class="external-advisor-contents-img">
-                <img src="./image/siozu3.png" alt=""/>
-              </div>
-              <div class="external-advisor-contents-text-contents">
-                <p class="external-advisor-contents-text-name">塩津 大輔</p>
-                <p class="external-advisor-contents-text-sub-name">
-                 SIOZU DAISUKE
-                </p>
-                <p class="external-advisor-contents-text-position">
-                  行政書士<br>
-                  塩津総合法務事務所 代表<br>
-                  超士業塾　主催<br>
-                </p>
-                <p class="external-advisor-contents-text-content">
-                  大阪府立北野高等学校卒業
-                  大阪市立大学経済学部卒業
-                  現在は行政書士事務所をコンサルタント会社を経営。
-                  行政書士事務所は独立開業して12年目、コンサル事業は9年目。
-                  現在では行政書士事務所としては300社以上の企業に関与させて頂きコンサルタントとしては士業事務所、企業合わせて100社以上のコンサルティング行う。                  
-                </p>
-              </div>
-            </div>
-                                  <!-- -------------------------------------------------
+            <!-- -------------------------------------------------
             2022/12/23日追加分
            橋場 和弥さん
             ------------------------------------------------- -->
@@ -267,7 +242,7 @@
               <div class="external-advisor-contents-text-contents">
                 <p class="external-advisor-contents-text-name">橋場 和弥</p>
                 <p class="external-advisor-contents-text-sub-name">
-                 HASHIMOTO KAZUYA
+                 HASHIBA KAZUYA
                 </p>
                 <p class="external-advisor-contents-text-position">
                   税理士<br>
@@ -368,9 +343,11 @@
                 </p>
               </div>
             </div>
-                                     <!-- -------------------------------------------------
+            <!-- -------------------------------------------------
+               -------------------------------------------------
             2022/12/23日追加分
            尾島 穣さん
+            -------------------------------------------------
             ------------------------------------------------- -->
             <div class="external-advisor-contents fadeUpContents animation-order-07">
               <div class="external-advisor-contents-img">
@@ -397,14 +374,16 @@
                   令和３年１１月　税理士事務所を退職し、㈱サムライコンサルティンググループの事業に専念
                   令和４年１月　㈱サムライコンサルティンググループを㈱未来サポートに商号変更
                   現在、開業サポートをメインに補助金支援、税理士紹介、不動産紹介、HP作成、広告代理業務等、開業や中小企業の売上UP支援を専門に事業を行っている。
-                  
+                
                 </p>
               </div>
             </div>
 
             <!-- -------------------------------------------------
+               -------------------------------------------------
             2022/12/23日追加分
            板井川　浩さん
+            -------------------------------------------------
             ------------------------------------------------- -->
             <div class="external-advisor-contents fadeUpContents animation-order-07">
               <div class="external-advisor-contents-img">
@@ -435,8 +414,10 @@
               </div>
             </div>
             <!-- -------------------------------------------------
+               -------------------------------------------------
             2022/12/23日追加分
            阿部 賢悟さん
+            -------------------------------------------------
             ------------------------------------------------- -->
             <div class="external-advisor-contents fadeUpContents animation-order-07">
               <div class="external-advisor-contents-img">
