読み仮名修正

--- a/team.html
+++ b/team.html
@@ -270,7 +270,7 @@
               <div class="external-advisor-contents-text-contents">
                 <p class="external-advisor-contents-text-name">内田 裕樹</p>
                 <p class="external-advisor-contents-text-sub-name">
-                  HIROKI UCHIDA
+                  UCHIDA HIROKI
                 </p>
                 <p class="external-advisor-contents-text-position">
                   司法書士、不動産鑑定士、行政書士、FP、測量士補、宅建士等々<br>
@@ -317,7 +317,7 @@
               <div class="external-advisor-contents-text-contents">
                 <p class="external-advisor-contents-text-name">白須 靖浩</p>
                 <p class="external-advisor-contents-text-sub-name">
-                  ITO KAI
+                  SHIRASU YASUHIRO
                 </p>
                 <p class="external-advisor-contents-text-position">
                   税理士<br>
@@ -356,7 +356,7 @@
               <div class="external-advisor-contents-text-contents">
                 <p class="external-advisor-contents-text-name">尾島 穣</p>
                 <p class="external-advisor-contents-text-sub-name">
-                  ITO KAI
+                  OZIMA JO
                 </p>
                 <p class="external-advisor-contents-text-position">
                   税理士<br>
