--- a/team.html
+++ b/team.html
@@ -443,7 +443,7 @@
           </div>
         </div>
 
-        <div class="partner">
+        <!-- <div class="partner">
           <h2 class="partner-h2"><span class="slide-in upAnime">
             <span class="slide-in_inner upAnimeInner">partner</span></span></h2>
           <div class="partner-contents-wrapper">
@@ -581,7 +581,7 @@
               </div>
             </div>
         </div>
-      </div>
+      </div> -->
     </main>
 
     <footer>
